Set navbar z-index to 1000 to resolve modal overlap

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 10000;
+  z-index: 1000;
   width: 100%;
   height: 60px;
   display: flex;
